2002-01-10  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added method to allow you to decide wether only
          refereed, non-refereed or all bibiliographic sources are queried.
       
2002-01-09  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added start & end year/month options to the
          query module so that the time over which the query can be made
          can be specified.
           
2001-12-03  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added conditional test to see if $base_url is
          defined before setting it in the method.
          
2001-11-13  Tim Jenness  <timj@jach.hawaii.edu>

	* adsquery.PL: Turn adsquery.pl into a "proper" executable

2001-11-14  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added user agent tag to module and allowed the user
          to specify an alternative URL for the closest ADS server to them
          
        * Makefile.PL: Added Net::Domain to the default build requirements,
          needed for the user agent tag  

2001-11-10  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Result/Paper/Paper.pm (summary): Deal with undefined values

	* adsquery.pl: Add --bibcode

	* Result/Result.pm (summary): Fix -w warning

2001-11-10  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added bibcode() method and associated 
          $self->{OPTIONS} hash entry as requested by Tim.

2001-11-07  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* Result/Result.pm (summary): Add summary and stringify

	* Result/Paper/Paper.pm (summary): Add summary and stringify

	* adsquery.pl: Add first stab at adsquery command line

	* Result/Result.pm (papers): Add a papers method

2001-11-07  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added timeout() method

2001-11-04  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query.pm: Added proxy() method

2001-11-02  Alasdair Allan <aa@astro.ex.ac.uk>
