@@ -1,3 +1,7 @@
+2002-05-30  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * t/paper.t: Minor bugfix to test harness.
+        
 2002-01-10  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Query/Query.pm: Added method to allow you to decide wether only
